Implement check permutations algorithm (1.2), implement basic hash map and linked list (hash linked list and linked list are the same thing but hash linked list nodes have a key member in order to search for a key's value in a linked list of length>1)

--- a/DataStructures/ch1/makefile
+++ b/DataStructures/ch1/makefile
@@ -1,8 +1,18 @@
 CC=g++
 CFLAGS=-Wall -pedantic -std=c++11 -g
-OBJS=
+INCDIR=../../include
+SOURCES=$(wildcard $(INCDIR)/*.cpp)
+OBJS=$(SOURCES:.cpp=.o)
 
-all: unique_strings
+all: check_permutations 
 
+#1.1
 unique_strings: $(OBJS) unique_strings.cpp
-	$(CC) $(CFLAGS) $(OBJS) unique_strings.cpp
+	$(CC) $(CFLAGS) $(OBJS) -I$(INCDIR) unique_strings.cpp
+
+#1.2
+check_permutations: $(OBJS) check_permutations.cpp
+	$(CC) $(CFLAGS) $(OBJS) -I$(INCDIR) check_permutations.cpp
+
+$(INCDIR)/%.o: $(INCDIR)/%.cpp
+	$(CC) $(CFLAGS) -c $< -o $(INCDIR)/$@
