Implement brute force urlify algorithm (1.3)

--- a/DataStructures/ch1/makefile
+++ b/DataStructures/ch1/makefile
@@ -4,7 +4,7 @@ INCDIR=../../include
 SOURCES=$(wildcard $(INCDIR)/*.cpp)
 OBJS=$(SOURCES:.cpp=.o)
 
-all: check_permutations 
+all: urlify 
 
 #1.1
 unique_strings: $(OBJS) unique_strings.cpp
@@ -13,6 +13,10 @@ unique_strings: $(OBJS) unique_strings.cpp
 #1.2
 check_permutations: $(OBJS) check_permutations.cpp
 	$(CC) $(CFLAGS) $(OBJS) -I$(INCDIR) check_permutations.cpp
+
+#1.3
+urlify: $(OBJS) urlify.cpp
+	$(CC) $(CFLAGS) $(OBJS) -I$(INCDIR) urlify.cpp
 
 $(INCDIR)/%.o: $(INCDIR)/%.cpp
 	$(CC) $(CFLAGS) -c $< -o $(INCDIR)/$@
