Implement palindrome permutation function (1-4)

--- a/DataStructures/ch1/makefile
+++ b/DataStructures/ch1/makefile
@@ -1,10 +1,14 @@
 CC=g++
-CFLAGS=-Wall -pedantic -std=c++11 -g
+CFLAGS=-Wall -pedantic --std=c++11 -g
 INCDIR=../../include
 SOURCES=$(wildcard $(INCDIR)/*.cpp)
 OBJS=$(SOURCES:.cpp=.o)
+EXEC=run
 
-all: urlify 
+all: check_palindrome_permutations
+
+check_palindrome_permutations: $(OBJS) check_palindrome_permutations.cpp
+	$(CC) $(CFLAGS) $(OBJS) -I$(INCDIR) check_palindrome_permutations.cpp -o $(EXEC)
 
 #1.1
 unique_strings: $(OBJS) unique_strings.cpp
